apps/mirakurun-iptv-rewriter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      imagePullSecrets:
        - name: ghcr-io-credentials
      containers:
        - name: app
          image: ghcr.io/starrybluesky/mirakurun-iptv-rewriter
      restartPolicy: Always
