apps/mirakurun-iptv-rewriter/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: default
